--- a/skins/weborder/css/quantity.css
+++ b/skins/weborder/css/quantity.css
@@ -83,7 +83,7 @@
 }
 
 .weight_edit_inner {
-    width: 60px !important;
+    width: auto !important;
     height: 27px !important;
     top: 3px;
 }
@@ -111,6 +111,34 @@
 }
 
 .product_instructions .add_instructions.sold_by_weight {
-    left: 230px;
+    left: 250px;
+}
+
+.quantity .weight_edit_input {
+    min-width: 60px;
+}
+
+.quantity .weight_edit_input[data-size="5"] {
+    width: 64px;
+}
+
+.quantity .weight_edit_input[data-size="6"] {
+    width: 73px;
+}
+
+.quantity .weight_edit_input[data-size="7"] {
+    width: 83px;
+}
+
+.quantity .weight_edit_input[data-size="8"] {
+    width: 93px;
+}
+
+.quantity .weight_edit_input[data-size="9"] {
+    width: 103px;
+}
+
+.quantity .weight_edit_input[data-size="10"] {
+    width: 113px;
 }
 /* end of sold_by_weight case */
